--- a/assets/manage_acc.css
+++ b/assets/manage_acc.css
@@ -16,7 +16,7 @@ body{
 .payment{
     background: #ffffff;
     max-width: 400px;
-    margin: 80px auto;
+    margin: 100px auto;
     height: auto;
     padding: 35px;
     padding-top: 70px;
@@ -88,9 +88,40 @@ body{
   text-align: center;
   color: #f8f8f8;
   cursor: pointer;
-  width: 100px;
+  width: 250px;
 }
 
 .btn:hover {
     transform: scale(1.1);
+}
+
+.payment-logo{
+    position: absolute;
+    top: -50px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100px;
+    height: 100px;
+    background: #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    text-align: center;
+    line-height: 85px;
+  }
+  
+  .payment-logo:before{
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    width: 90px;
+    height: 90px;
+    background:linear-gradient(to right, #bde5ff, #ecdff1);
+    border-radius: 50%;
+  }
+
+  .user_image {
+    width: 60px;
+    height: auto;
+    margin-top: 10px;
 }
